--- a/index.html
+++ b/index.html
@@ -47,12 +47,18 @@
         body.loaded>div.preloader {
             animation: hidePreloader .5s linear .5s forwards;
         }
+
+        nav .navbar-nav li a:hover{
+        color: black !important;
+        }
+
     </style>
     <script>
         window.addEventListener("load", function() {
             setTimeout(function() {
                 document.querySelector('body').classList.add('loaded');
             }, 300);
+
         });
     </script>
     <!-- Favicon -->
@@ -69,19 +75,20 @@
             <span class="sr-only">Loading...</span>
         </div>
     </div>
-    <!-- <div class="modal fade" tabindex="-1" role="dialog" id="modal-cookies" data-backdrop="false" aria-labelledby="modal-cookies" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-aside left-4 right-4 bottom-4">
-            <div class="modal-content bg-dark-dark">
+    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-cookies">
+        Launch demo modal
+      </button> -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="modal-cookies" aria-labelledby="modal-cookies" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
                 <div class="modal-body">
-                    <p class="text-sm text-white mb-3">
-                        We use cookies so that our themes work for you. By using our website, you agree to our use of cookies.
-                    </p>
-                    <a href="pages/utility/terms.html" class="btn btn-sm btn-white" target="_blank">Learn more</a>
+                    <img alt="Image placeholder" src="assets/img/backgrounds/discount.jpeg" class="img-fluid mb-2">
+                    <!-- <a href="pages/utility/terms.html" class="btn btn-sm btn-white" target="_blank">Learn more</a> -->
                     <button type="button" class="btn btn-sm btn-primary mr-2" data-dismiss="modal">OK</button>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- Go Pro -->
     <!-- <a href="https://webpixels.io/themes/quick-website-ui-kit" class="btn btn-block btn-dark text-truncate rounded-0 py-2 d-none d-lg-block" style="z-index: 1000;" target="_blank">
         <strong>This is a free demo.</strong> Click here to open the full version →
@@ -103,7 +110,16 @@
                     <li class="nav-item ">
                         <a class="nav-link" href="index.html">Overview</a>
                     </li>
-                    <li class="nav-item dropdown dropdown-animate" data-toggle="hover">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="index.html">Services</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="index.html">Offers</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="index.html">Contact us</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown dropdown-animate" data-toggle="hover">
                         <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                         <div class="dropdown-menu dropdown-menu-single">
                             <a href="index.html" class="dropdown-item">Homepage</a>
@@ -115,22 +131,22 @@
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="docs/index.html">Docs</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <!-- Button -->
-                <a class="navbar-btn btn btn-sm btn-primary d-none d-lg-inline-block ml-3" href="https://github.com/webpixels/quick-website-ui-kit-demo/archive/master.zip">
+                <!-- <a class="navbar-btn btn btn-sm btn-primary d-none d-lg-inline-block ml-3" href="https://github.com/webpixels/quick-website-ui-kit-demo/archive/master.zip">
                     Download Free
-                </a>
+                </a> -->
                 <!-- Mobile button -->
-                <div class="d-lg-none text-center">
+                <!-- <div class="d-lg-none text-center">
                     <a href="https://webpixels.io/themes/quick-website-ui-kit" class="btn btn-block btn-sm btn-warning">See more details</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </nav>
     <!-- Main content -->
     <section class="slice py-7">
-        <div class="container">
+        <div class="container" >
             <div class="row row-grid align-items-center">
                 <div class="col-12 col-md-5 col-lg-6 order-md-2 text-center">
                     <!-- Image -->
@@ -143,26 +159,29 @@
                 <div class="col-12 col-md-7 col-lg-6 order-md-1 pr-md-5">
                     <!-- Heading -->
                     <h1 class="display-4 text-center text-md-left mb-3">
-                        Care that your <strong class="text-primary">pet needs</strong>
+                        Care that your <br/><strong class="text-primary">pet needs</strong>
                     </h1>
                     <!-- Text -->
                     <p class="lead text-center text-md-left text-muted">
-                        Build a beautiful, modern website with flexible Bootstrap components built from scratch.
+                        We are dog-lovers turned professionals. Here to provide the best pet services to keep your pet healthy and awesome. Our mission is to be your best friend’s new best friend
                     </p>
+                    <div class="text-center text-md-left">
+                        <span class="avatar bg-dark text-white rounded-circle">💕</span>
+                    </div>
                     <!-- Buttons -->
-                    <div class="text-center text-md-left mt-5">
+                    <!-- <div class="text-center text-md-left mt-5">
                         <a href="https://webpixels.io/themes/quick-free-bootstrap-theme" class="btn btn-primary btn-icon" target="_blank">
                             <span class="btn-inner--text">Get started</span>
                             <span class="btn-inner--icon"><i data-feather="chevron-right"></i></span>
                         </a>
                         <a href="https://webpixels.io/illustrations" class="btn btn-neutral btn-icon d-none d-lg-inline-block" target="_blank">See Illustrations</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </section>
-    <section class="slice slice-lg pt-lg-6 pb-0 pb-lg-6 bg-section-secondary">
-        <div class="container">
+    <section class="slice slice-lg pt-lg-6 pb-0 pb-lg-6 bg-section-secondary" style="background-image: url('assets/img/svg/illustrations/paws.svg');">
+        <div class="container" >
             <!-- Title -->
             <!-- Section title -->
             <div class="row mb-5 justify-content-center text-center">
@@ -182,9 +201,9 @@
                     <div class="card">
                         <div class="card-body pb-5">
                             <div class="pt-4 pb-5">
-                                <img src="assets/img/svg/illustrations/illustration-5.svg" class="img-fluid img-center" style="height: 150px;" alt="Illustration" />
+                                <img src="https://i.pinimg.com/originals/f9/b0/07/f9b00772d4d646564dfbe35dbe720991.png" class="img-fluid img-center" style="height: 150px;" alt="Illustration" />
                             </div>
-                            <h5 class="h4 lh-130 mb-3">Unleash you creativity</h5>
+                            <h5 class="h4 lh-130 mb-3">Pet food</h5>
                             <p class="text-muted mb-0">Quick Website UI Kit (FREE) contains components and pages that are easy to customize and change.</p>
                         </div>
                     </div>
