--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Quick – Website UI Kit (FREE)</title>
     <!-- Preloader -->
     <style>
+        html {
+        scroll-behavior: smooth;
+        }
         @keyframes hidePreloader {
             0% {
                 width: 100%;
@@ -160,6 +163,10 @@
                         <a class="nav-link" href="index.html">Overview</a>
                     </li>
                     <li class="nav-item ">
+                        <a href="#offers" class="nav-link">Offer</a>
+                    </li>
+                    
+                    <li class="nav-item ">
                         <a class="nav-link" href="index.html">Services</a>
                     </li>
                     <li class="nav-item ">
@@ -202,7 +209,7 @@
                     <figure class="w-100">
                         <!-- <img alt="Image placeholder" src="https://images.ctfassets.net/f7tuyt85vtoa/aLpA08MU0o95DOwirZoOc/41f82697e0dde05e54d7dd9b095e5f63/PEts-like-humans-article-COVER.jpg" class="img-fluid mw-md-120"> -->
                         <img alt="Image placeholder" src="assets/img/svg/illustrations/hero.svg" class="img-fluid mw-md-120">
-                        <!-- <img alt="Image placeholder" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto:best,dpr_2.0,h_382/holiday-bopus-hp-hero-110121-533w-382h" class="img-fluid mw-md-120"> -->
+                        <!-- <img alt="Image placeholder" src="https://www.independent.ie/world-news/and-finally/81f68/36052454.ece/AUTOCROP/w1240h700/ipanews_7e6672dd-558f-486c-bf3a-818cb231b68a_1" class="img-fluid mw-md-120"> -->
                         
                     </figure>
                 </div>
@@ -231,7 +238,7 @@
         </div>
     </section>
 
-    <section class="slice slice-lg pt-10 bg-primary">
+    <section class="slice slice-lg pt-10 bg-primary" id="offers">
         <!-- SVG separator -->
         <div class="shape-container shape-line shape-position-top shape-orientation-inverse">
             <svg width="2560px" height="100px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" x="0px" y="0px" viewBox="0 0 2560 100" style="enable-background:new 0 0 2560 100;" xml:space="preserve" class="">
@@ -821,6 +828,29 @@
             </div>
         </div>
     </section>
+
+
+    <section class="slice slice-lg">
+        <div class="container">
+            <div class="row row-grid justify-content-between align-items-center">
+                <div class="col-lg-5">
+                    <h3>35A Advait Complex, Sandesh Press Road, Vastrapur<br>Ahmedabad, 30015</h3>
+                    <p class="lead my-4">
+                        E: <a href="mailto:jagdish@thepetcoindia.com">jagdish@thepetcoindia.com</a><br>
+                        T: (748) 698-0101
+                    </p>
+                    <p>
+                        Want to share any feedback with us, report a technical issue or just ask us a question? Fill free to contact us and we will get back to you shortly.
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830872278!2d-74.1197639579598!3d40.69766374873451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sro!4v1580299124407!5m2!1sen!2sro" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" class="rounded"></iframe> -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.528821969998!2d72.52374751505592!3d23.04106632141829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e84b3e5da5dcf%3A0x12240eb767e0611d!2sAdvait%20Complex%2C%20Sandesh%20Press%20Rd%2C%20Vastrapur%2C%20Ahmedabad%2C%20Gujarat%20380015%2C%20India!5e0!3m2!1sen!2sus!4v1639019204029!5m2!1sen!2sus" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" class="rounded" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="position-relative" id="footer-main">
         <div class="footer pt-lg-7 footer-dark bg-dark">
             <!-- SVG shape -->
@@ -830,71 +860,11 @@
                 </svg>
             </div>
             <!-- Footer -->
-            <div class="container pt-4">
-                <div class="row">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <!-- Theme's logo -->
-                        <a href="index.html">
-                            <img alt="Image placeholder" src="assets/img/brand/light.svg" id="footer-logo">
-                        </a>
-                        <!-- Webpixels' mission -->
-                        <p class="mt-4 text-sm opacity-8 pr-lg-4">Webpixels attempts to bring the best development experience to designers and developers by offering the tools needed for having a quick and solid start in most web projects.</p>
-                        <!-- Social -->
-                        <ul class="nav mt-4">
-                            <li class="nav-item">
-                                <a class="nav-link pl-0" href="https://dribbble.com/webpixels" target="_blank">
-                                    <i class="fab fa-dribbble"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/webpixels" target="_blank">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.instagram.com/webpxs" target="_blank">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.facebook.com/webpixels" target="_blank">
-                                    <i class="fab fa-facebook"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-6 col-sm-4 ml-lg-auto mb-5 mb-lg-0">
-                        <h6 class="heading mb-3">Account</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Profile</a></li>
-                            <li><a href="#">Settings</a></li>
-                            <li><a href="#">Billing</a></li>
-                            <li><a href="#">Notifications</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-6 col-sm-4 mb-5 mb-lg-0">
-                        <h6 class="heading mb-3">About</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Careers</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-6 col-sm-4 mb-5 mb-lg-0">
-                        <h6 class="heading mb-3">Company</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Community</a></li>
-                            <li><a href="#">Help center</a></li>
-                            <li><a href="#">Support</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <hr class="divider divider-fade divider-dark my-4">
+            <!-- <div class="container pt-4">
                 <div class="row align-items-center justify-content-md-between pb-4">
                     <div class="col-md-6">
                         <div class="copyright text-sm font-weight-bold text-center text-md-left">
-                            &copy; 2020 <a href="https://webpixels.io" class="font-weight-bold" target="_blank">Webpixels</a>. All rights reserved
+                            &copy; 2021 <a href="https://webpixels.io" class="font-weight-bold" target="_blank">The Pet Co.</a> All rights reserved
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -915,7 +885,15 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
+                    </div> 
+                </div>
+            </div> -->
+
+            <div class="container">
+                <div class="row pb-4">
+                        <div class="col-md-12 copyright text-sm font-weight-bold text-center">
+                            &copy; 2021 <a href="https://thepetcoindia.com" class="font-weight-bold" target="_blank">The Pet Co.</a> All rights reserved
+                        </div>
                 </div>
             </div>
         </div>
