--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <p class="mt-4">
                         If you have any questions or comments about how we can care for your pet? Feel free to contact us today.
                     </p>
-                    <h3 class="mt-4">35A Advait Complex, Sandesh Press Road, Vastrapur<br>Ahmedabad, 30015</h3>
+                    <h4 class="mt-4">35A Advait complex, Sandesh Press turning, opposite Belgian Waffle, <br>Vastrapur, Ahmedabad, <br/>Gujarat 380015, India </h4>
                     <p class="lead my-4">
                         E: <a href="mailto:jagdish@thepetcoindia.com">jagdish@thepetcoindia.com</a><br>
                         T: (748) 698-0101
